--- a/portfolio.html
+++ b/portfolio.html
@@ -1,54 +1,171 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/styles.css"/>
-</head>
-<body>
-                   <!-- Шапка сторінки -->
-        <header class="header">
-        <nav>
-            <!-- Логотип сайту -->
-            <a class= "logo link" href="./index.html">Web<span class="logo-header-part">Studio</span></a>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <!-- Шапка сторінки -->
+    <header class="header">
+      <nav>
+        <!-- Логотип сайту -->
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-header-part">Studio</span></a
+        >
         <!-- Навігація на інші сторінки -->
         <ul class="header-list list">
-            <li class="header-item">
+          <li class="header-item">
             <a class="header-link link" href="./index.html">Студія</a>
-            </li>
-            <li class="header-item">
+          </li>
+          <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Портфоліо</a>
-            </li>
-            <li class="header-item">
+          </li>
+          <li class="header-item">
             <a class="header-link link" href="">Контакти</a>
-            </li>
-          </ul>
-</nav>
-    <!-- Контактна інформація -->
-    <ul class="contact-list list">
+          </li>
+        </ul>
+      </nav>
+      <!-- Контактна інформація -->
+      <ul class="contact-list list">
         <li>
-            <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li>
-            <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-tel link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </li>
-    </ul>
+      </ul>
     </header>
-  <!-- Основний контент сторінки -->
-<main>
-    <button class="btn-all" type="button">Усі</button>
-    <button class="btn-all" type="button">Веб-сайти</button>
-    <button class="btn-all" type="button">Додатки</button>
-    <button class="btn-all" type="button">Дизайн</button>
-    <button class="btn-all" type="button">Маркетинг</button>
-   
-   
-    <!-- <section> 
+    <!-- Основний контент сторінки -->
+    <main>
+      <h1 hidden>Фільтр портфоліо</h1>
+      <ul>
+        <li class="list">
+          <button class="filter-btn" type="button">Усі</button>
+        </li>
+        <li class="list">
+          <button class="filter-btn" type="button">Веб-сайти</button>
+        </li>
+        <li class="list">
+          <button class="filter-btn" type="button">Додатки</button>
+        </li>
+        <li class="list">
+          <button class="filter-btn" type="button">Дизайн</button>
+        </li>
+        <li class="list">
+          <button class="filter-btn" type="button">Маркетинг</button>
+        </li>
+      </ul>
+
+      <section>
+        <h2 hidden class="portfolio-list">Список портфоліо</h2>
+        <ul>
+          <li class="list">
+            <img
+              src="images/portfol1.jpg"
+              alt="Портфоліо 1"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Технокряк</h3>
+            <p class="worktitle">Веб-сайт</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol2.jpg"
+              alt="Портфоліо 2"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Постер New Orlean vs Golden Star</h3>
+            <p class="worktitle">Дизайн</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol3.jpg"
+              alt="Портфоліо 3"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Ресторан Seafood</h3>
+            <p class="worktitle">Додаток</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol4.jpg"
+              alt="Портфоліо 4"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Проєкт Prime</h3>
+            <p class="worktitle">Маркетинг</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol5.jpg"
+              alt="Портфоліо 5"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Проєкт Boxes</h3>
+            <p class="worktitle">Додаток</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol6.jpg"
+              alt="Портфоліо 6"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Inspiration has no Borders</h3>
+            <p class="worktitle">Веб-сайт</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol7.jpg"
+              alt="Портфоліо 7"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Видання Limited Edition</h3>
+            <p class="worktitle">Дизайн</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol8.jpg"
+              alt="Портфоліо 8"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Проєкт LAB</h3>
+            <p class="worktitle">Маркетинг</p>
+          </li>
+          <li class="list">
+            <img
+              src="images/portfol9.jpg"
+              alt="Портфоліо 9"
+              height="294"
+              width="370"
+            />
+            <h3 class="project">Growing Business</h3>
+            <p class="worktitle">Додаток</p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- <section> 
         <h1>
         Ефективні рішення для вашого бізнесу
         </h1>
@@ -136,26 +253,29 @@
         </li>
         </ul>      
 </section> -->
-
-</main>
-<!-- Підвал сторінки -->
-<footer>
-  <!-- Логотип сайту -->
-  <a class= "logo link" href="./index.html">Web<span class="logo-footer-part">Studio</span></a>
-<address>
-    <p class="address">
-м. Київ, пр-т Лесі Українки, 26
-</p>
-<!-- Контактна інформація -->
-<ul class="footer-contact-list list">
-    <li>
-        <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-    </li>
-    <li>
-        <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
-    </li>
-</ul>
-</address>
-</footer>
-</body>
+    </main>
+    <!-- Підвал сторінки -->
+    <footer>
+      <!-- Логотип сайту -->
+      <a class="logo link" href="./index.html"
+        >Web<span class="logo-footer-part">Studio</span></a
+      >
+      <address>
+        <p class="address">м. Київ, пр-т Лесі Українки, 26</p>
+        <!-- Контактна інформація -->
+        <ul class="footer-contact-list list">
+          <li>
+            <a class="footer-mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="footer-tel link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
