some changes for hidden objects

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
       </ul>
 
       <section>
-        <h2 hidden class="portfolio-list">Список портфоліо</h2>
+        <h2 hidden class="visually-hidden">Список портфоліо</h2>
         <ul>
           <li class="list">
             <img
