--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     </header>
     <!-- Основний контент сторінки -->
     <main>
-      <h1 hidden>Фільтр портфоліо</h1>
+      <h1 class="visually-hidden">Фільтр портфоліо</h1>
       <ul>
         <li class="list">
           <button class="filter-btn" type="button">Усі</button>
@@ -70,7 +70,7 @@
       </ul>
 
       <section>
-        <h2 hidden class="visually-hidden">Список портфоліо</h2>
+        <h2 class="visually-hidden">Список портфоліо</h2>
         <ul>
           <li class="list">
             <img
@@ -79,7 +79,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Технокряк</h3>
+            <h2 class="project">Технокряк</h2>
             <p class="worktitle">Веб-сайт</p>
           </li>
           <li class="list">
@@ -89,7 +89,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Постер New Orlean vs Golden Star</h3>
+            <h2 class="project">Постер New Orlean vs Golden Star</h2>
             <p class="worktitle">Дизайн</p>
           </li>
           <li class="list">
@@ -99,7 +99,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Ресторан Seafood</h3>
+            <h2 class="project">Ресторан Seafood</h2>
             <p class="worktitle">Додаток</p>
           </li>
           <li class="list">
@@ -109,7 +109,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Проєкт Prime</h3>
+            <h2 class="project">Проєкт Prime</h2>
             <p class="worktitle">Маркетинг</p>
           </li>
           <li class="list">
@@ -119,7 +119,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Проєкт Boxes</h3>
+            <h2 class="project">Проєкт Boxes</h2>
             <p class="worktitle">Додаток</p>
           </li>
           <li class="list">
@@ -129,7 +129,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Inspiration has no Borders</h3>
+            <h2 class="project">Inspiration has no Borders</h2>
             <p class="worktitle">Веб-сайт</p>
           </li>
           <li class="list">
@@ -139,7 +139,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Видання Limited Edition</h3>
+            <h2 class="project">Видання Limited Edition</h2>
             <p class="worktitle">Дизайн</p>
           </li>
           <li class="list">
@@ -149,7 +149,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Проєкт LAB</h3>
+            <h2 class="project">Проєкт LAB</h2>
             <p class="worktitle">Маркетинг</p>
           </li>
           <li class="list">
@@ -159,7 +159,7 @@
               height="294"
               width="370"
             />
-            <h3 class="project">Growing Business</h3>
+            <h2 class="project">Growing Business</h2>
             <p class="worktitle">Додаток</p>
           </li>
         </ul>
