--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Навігація на інші сторінки -->
           <ul class="header-list list">
             <li class="header-item">
-            <a class="header-link link" href="./index.html">Студія</a>
+            <a class="header-link current link" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Портфоліо</a>
